# mapa-pd-calibration

./: .gitignore  README.md
.github/workflows/: ci-cd.yml
app/: README.md
app/backend/: Dockerfile  main.py  pipeline.py  pooling_steps.py  schemas.py
app/frontend/: index.html  package-lock.json  package.json
app/frontend/src/: App.tsx  api.ts  chart-utils.ts  (+3 more)
docs/: mapa-methodology.md
examples/: README.md  example_plot_cpp.py  example_plot_python.py  plotting.py
examples/cpp/: .gitignore  generate_output.cpp
infra/: README.md  backend.tf  frontend.tf  outputs.tf  variables.tf
infra/bootstrap/: main.tf  variables.tf
reference/: README.md
reference/cpp/: CMakeLists.txt  README.md  mapa.cpp  mapa.hpp  test_mapa.cpp
reference/fixtures/: expected_calibrated_bins.csv  expected_calibrated_bins_weighted.csv  expected_initial_bins.csv  expected_initial_bins_weighted.csv  expected_min_size_bins.csv  expected_min_size_bins_weighted.csv  expected_pooled_bins.csv  expected_pooled_bins_confidence.csv  expected_pooled_bins_weighted.csv  expected_repooled_calibrated_bins.csv  expected_smoothed_pds.csv  expected_smoothed_pds_weighted.csv  raw_observations.csv  raw_observations_weighted.csv
reference/matlab/: README.md  apply_bayesian_adjustment.m  bins_from_observations.m  enforce_minimum_size.m  interpolate_pd.m  mapa_calibrate.m  mapa_pool.m  repool_calibrated_bins.m  run_example.m  run_pipeline.m  test_mapa.m
reference/python/: README.md  mapa.py  test_mapa.py
reference/r/: README.md  mapa.R  test_mapa.R
reference/sas/: README.md  mapa.sas  test_mapa.sas
(+20 files in other folders)
